# colibri

./: Cargo.toml
locales/EN/: main.ftl
locales/NL/: main.ftl
migrations/: 001_create_users.sql
src/: db.rs  lib.rs  main.rs  templates.rs
src/controllers/: admin_staff_controller.rs  booking_controller.rs  csrf_controller.rs  customer_controller.rs  db_controller.rs  email_controller.rs  login_controller.rs  mod.rs  page_controller.rs  payment_controller.rs  price_controller.rs  print_controller.rs  validation_controller.rs
src/routes/: mod.rs
src/static/css/base/: alert.css  base_style.css
src/static/css/crud/: admin_bookings_read.css  admin_read.css
src/static/css/layouts/: admin_layout.css  public_layout.css
src/static/css/pages/: admin_booking_form.css  admin_booking_overview.css  (+12 more)
src/static/js/: alert.js
templates/layouts/: admin_layout.html  public_layout.html
templates/pages/: admin_booking1_create.html  admin_booking2_create.html  admin_booking_overview.html  admin_booking_print.html  admin_booking_status.html  admin_booking_update.html  admin_booking_update_overview.html  admin_bookings_read.html  admin_customer_create.html  admin_customer_read.html  admin_customer_update.html  admin_forgot_password.html  admin_home.html  admin_login.html  admin_prices.html  admin_reset_password.html  admin_staff_create.html  admin_staff_read.html  admin_staff_update.html  contact.html  public_booking1.html  public_booking2.html  public_booking_overview.html  public_contact.html  public_home.html  public_tos.html  tos.html
tests/: colibri_tests.rs
