[package]
name = "colibri"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework for handling HTTP requests and routing
actix-web = "4"

# Plugin for serving static files like CSS and images
actix-files = "0.6"

# Template engine to render HTML files with Rust data
askama = "0.12"

# Loads environment variables from a .env file (e.g., database URLs)
dotenv = "0.15"

# Framework for serializing and deserializing data (e.g., JSON)
serde = { version = "1", features = ["derive"] }

# Middleware for managing user sessions via cookies
actix-session = { version = "0.9", features = ["cookie-session"] }

# Date and time library for handling timestamps
chrono = { version = "0.4", features = ["serde"] }

# Database driver to communicate with the PostgreSQL container
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.10"

# Internationalization (i18n) support
fluent = "0.16"
unic-langid = "0.9"

# Helper for loading Fluent files (Fluent templates for Askama/Tera)
fluent-templates = { version = "0.8", features = ["macros"] }

uuid = { version = "1", features = ["v4"] }

# For email
lettre = "0.11"

# Password hashing and verification
bcrypt = "0.15"